derive-ex-tests/tests/compile_fail/compare_op/eq_with_parital_eq_by.stderr
error: When `#[derive_ex(Eq)]` is specified, `#[eq(by = ...)]` must be used instead of `#[partial_eq(by = ...)]`.
 --> tests/compile_fail/compare_op/eq_with_parital_eq_by.rs:4:28
  |
4 | struct X(#[partial_eq(by = |l, r| l.len() == r.len())] String);
  |                            ^
